--- a/Contractor Co-pilot/Base.lproj/LaunchScreen.xib
+++ b/Contractor Co-pilot/Base.lproj/LaunchScreen.xib
@@ -23,7 +23,7 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nutech-Systems-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="roY-ZB-Hgt">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nutech-Systems-logoLoad.png" translatesAutoresizingMaskIntoConstraints="NO" id="roY-ZB-Hgt">
                     <rect key="frame" x="120" y="196" width="240" height="128"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="240" id="9Xp-fe-LhI"/>
@@ -48,6 +48,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Nutech-Systems-logo.png" width="288" height="144"/>
+        <image name="Nutech-Systems-logoLoad.png" width="288" height="144"/>
     </resources>
 </document>
