--- a/Contractor Co-pilot/Base.lproj/Main.storyboard
+++ b/Contractor Co-pilot/Base.lproj/Main.storyboard
@@ -237,6 +237,18 @@
                                     <constraint firstAttribute="width" constant="298" id="eiU-4G-5Ti"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bCr-lz-uB4">
+                                <rect key="frame" x="261" y="195" width="78" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="78" id="qqg-Md-9VW"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="PoweredByYellowAPI.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="toYellowAPI:" destination="Fhi-1l-juP" eventType="touchUpInside" id="8Kb-ab-j3c"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -244,8 +256,12 @@
                             <constraint firstItem="NFN-xF-4Pr" firstAttribute="top" secondItem="Urv-Ae-i7B" secondAttribute="bottom" constant="107" id="Bie-Zl-8we"/>
                             <constraint firstItem="Urv-Ae-i7B" firstAttribute="centerX" secondItem="UWV-Ef-WvV" secondAttribute="centerX" id="BlA-Lt-jG5"/>
                             <constraint firstItem="Urv-Ae-i7B" firstAttribute="top" secondItem="OaM-AE-DRS" secondAttribute="bottom" constant="19" id="DbR-Pz-PVX"/>
+                            <constraint firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" constant="-0.5" id="EE7-0q-ego"/>
                             <constraint firstItem="aH7-6I-EHX" firstAttribute="top" secondItem="gDa-ck-BeE" secondAttribute="bottom" constant="8" id="EJG-Um-62s"/>
+                            <constraint firstItem="AYy-mD-oro" firstAttribute="top" secondItem="bCr-lz-uB4" secondAttribute="bottom" constant="22" id="Fc1-3b-hJH"/>
                             <constraint firstItem="OaM-AE-DRS" firstAttribute="top" secondItem="AYy-mD-oro" secondAttribute="bottom" constant="25" id="I7E-Hb-FV7"/>
+                            <constraint firstItem="bCr-lz-uB4" firstAttribute="top" secondItem="aH7-6I-EHX" secondAttribute="bottom" constant="13" id="Ja6-62-wbw"/>
+                            <constraint firstItem="bCr-lz-uB4" firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" id="KWT-cp-yjk"/>
                             <constraint firstItem="Urv-Ae-i7B" firstAttribute="leading" secondItem="OaM-AE-DRS" secondAttribute="leading" id="df8-cU-VFr"/>
                             <constraint firstItem="AYy-mD-oro" firstAttribute="top" secondItem="aH7-6I-EHX" secondAttribute="bottom" constant="53" id="gCs-wA-dDD"/>
                             <constraint firstItem="Urv-Ae-i7B" firstAttribute="trailing" secondItem="AYy-mD-oro" secondAttribute="trailing" id="hC7-7e-siy"/>
@@ -374,10 +390,10 @@
             </objects>
             <point key="canvasLocation" x="1617" y="-226"/>
         </scene>
-        <!--Change Location-->
+        <!--Change Location View Controller-->
         <scene sceneID="bC5-Ut-v4N">
             <objects>
-                <viewController title="Change Location" id="i6g-6B-xxe" customClass="changeLocationViewController" sceneMemberID="viewController">
+                <viewController id="i6g-6B-xxe" customClass="changeLocationViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="oM4-4v-4jO"/>
                         <viewControllerLayoutGuide type="bottom" id="tpK-AR-9Sf"/>
@@ -459,6 +475,13 @@
                                     <constraint firstAttribute="width" constant="82" id="xXG-7R-OVn"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Address" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZe-lt-L09">
+                                <rect key="frame" x="129" y="107" width="343" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -468,9 +491,12 @@
                             <constraint firstAttribute="centerX" secondItem="Rkv-BF-3m2" secondAttribute="centerX" constant="-0.5" id="DUD-fn-7k3"/>
                             <constraint firstAttribute="centerX" secondItem="8ny-J3-z96" secondAttribute="centerX" constant="-0.5" id="DpG-VL-7lQ"/>
                             <constraint firstItem="Cw2-yd-1iP" firstAttribute="leading" secondItem="r0z-aL-k8x" secondAttribute="leadingMargin" id="Laf-EW-v0n"/>
+                            <constraint firstItem="MaZ-wW-dyM" firstAttribute="top" secondItem="wZe-lt-L09" secondAttribute="bottom" constant="32" id="NS6-wM-8US"/>
                             <constraint firstItem="Rkv-BF-3m2" firstAttribute="top" secondItem="8ny-J3-z96" secondAttribute="bottom" constant="30" id="RsU-OT-1GW"/>
+                            <constraint firstItem="wZe-lt-L09" firstAttribute="trailing" secondItem="MaZ-wW-dyM" secondAttribute="trailing" id="T7N-S1-iLc"/>
                             <constraint firstItem="xuN-Ii-9P8" firstAttribute="top" secondItem="lbW-4F-z76" secondAttribute="bottom" constant="30" id="TCV-5f-97o"/>
                             <constraint firstAttribute="centerX" secondItem="xuN-Ii-9P8" secondAttribute="centerX" constant="-0.5" id="WsF-rf-hub"/>
+                            <constraint firstItem="wZe-lt-L09" firstAttribute="leading" secondItem="MaZ-wW-dyM" secondAttribute="leading" id="Zyz-kh-nkm"/>
                             <constraint firstItem="tpK-AR-9Sf" firstAttribute="top" secondItem="Cw2-yd-1iP" secondAttribute="bottom" constant="477" id="bem-2w-XDd"/>
                             <constraint firstItem="MaZ-wW-dyM" firstAttribute="top" secondItem="oM4-4v-4jO" secondAttribute="bottom" constant="96" id="cbI-IG-ihc"/>
                             <constraint firstAttribute="centerX" secondItem="jxh-rq-5W8" secondAttribute="centerX" constant="-0.5" id="dui-aj-i8b"/>
@@ -517,6 +543,7 @@
     <resources>
         <image name="NuTechLogoClear.png" width="120" height="120"/>
         <image name="Nutech-Systems-logoClear.png" width="288" height="144"/>
+        <image name="PoweredByYellowAPI.png" width="555" height="145"/>
         <image name="navigate48.png" width="32" height="32"/>
         <image name="redGradient.png" width="10" height="100"/>
     </resources>
