--- a/Contractor Co-pilot/Base.lproj/LaunchScreen.xib
+++ b/Contractor Co-pilot/Base.lproj/LaunchScreen.xib
@@ -2,68 +2,68 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grayGradient.png" translatesAutoresizingMaskIntoConstraints="NO" id="o8w-iX-if8">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nutech-Systems-logoClear.png" translatesAutoresizingMaskIntoConstraints="NO" id="U7W-pw-83T">
-                    <rect key="frame" x="96" y="158" width="288" height="163"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NuTechLogoClear.png" translatesAutoresizingMaskIntoConstraints="NO" id="U7W-pw-83T">
+                    <rect key="frame" x="96" y="158" width="222" height="163"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="163" id="x1V-ag-UCW"/>
+                        <constraint firstAttribute="height" constant="163" id="Pkm-iw-yjS"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015 Nutech Systems, Inc. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="7" y="443" width="466" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contractor Co-pilot" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="87" width="441" height="43"/>
+                    <rect key="frame" x="20" y="87" width="375" height="43"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByYellowAPI.png" translatesAutoresizingMaskIntoConstraints="NO" id="rlW-3I-vL8">
-                    <rect key="frame" x="383" y="417" width="78" height="18"/>
+                    <rect key="frame" x="317" y="673" width="78" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="18" id="F9a-7D-r66"/>
-                        <constraint firstAttribute="width" constant="78" id="yTF-Fs-MxJ"/>
+                        <constraint firstAttribute="width" constant="78" id="2Y0-3J-QxI"/>
+                        <constraint firstAttribute="height" constant="18" id="izQ-G3-rv9"/>
                     </constraints>
                 </imageView>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015 Nutech Systems, Inc. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
+                    <rect key="frame" x="20" y="699" width="375" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="U7W-pw-83T" firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="4hQ-yq-tSf"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="-51.5" id="5cJ-9S-tgC"/>
-                <constraint firstItem="U7W-pw-83T" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="158" id="EUG-nl-8L3"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="rlW-3I-vL8" secondAttribute="bottom" constant="8" symbolic="YES" id="Fbn-5y-WBr"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="16" id="Kzo-t9-V3l"/>
-                <constraint firstItem="U7W-pw-83T" firstAttribute="centerX" secondItem="o8w-iX-if8" secondAttribute="centerX" id="LHJ-so-bba"/>
-                <constraint firstItem="rlW-3I-vL8" firstAttribute="trailing" secondItem="kId-c2-rCX" secondAttribute="trailing" id="MBu-Wx-Nt6"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="7" id="MfP-vx-nX0"/>
-                <constraint firstItem="o8w-iX-if8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Ts9-lJ-R1R"/>
-                <constraint firstAttribute="bottom" secondItem="o8w-iX-if8" secondAttribute="bottom" id="XEv-oG-OxU"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="o8w-iX-if8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="b4M-VO-ax2"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="U7W-pw-83T" firstAttribute="top" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="28" id="4DZ-rA-lVv"/>
+                <constraint firstAttribute="bottom" secondItem="o8w-iX-if8" secondAttribute="bottom" id="5mU-7I-whU"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="centerX" secondItem="U7W-pw-83T" secondAttribute="centerX" id="M3l-Ys-uUg"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="8ie-xW-0ye" secondAttribute="leading" id="NcJ-HI-iHy"/>
+                <constraint firstItem="o8w-iX-if8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="QT8-KN-zSh"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="ReJ-7y-2mu"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="trailing" secondItem="rlW-3I-vL8" secondAttribute="trailing" id="TON-kh-uAi"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="87" id="UGc-M9-HRJ"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="rlW-3I-vL8" secondAttribute="bottom" constant="8" symbolic="YES" id="XzC-IJ-ycj"/>
+                <constraint firstItem="o8w-iX-if8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="dww-Kc-62z"/>
+                <constraint firstItem="U7W-pw-83T" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="96" id="irU-t4-K2Q"/>
+                <constraint firstItem="rlW-3I-vL8" firstAttribute="trailing" secondItem="kId-c2-rCX" secondAttribute="trailing" id="kZ7-uJ-3Uu"/>
+                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="16" id="rV0-zq-3GP"/>
+                <constraint firstAttribute="trailing" secondItem="o8w-iX-if8" secondAttribute="trailing" id="ukC-l6-edl"/>
+                <constraint firstItem="o8w-iX-if8" firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="wj4-lq-Bmu"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
     <resources>
-        <image name="Nutech-Systems-logoClear.png" width="288" height="144"/>
+        <image name="NuTechLogoClear.png" width="128" height="128"/>
         <image name="PoweredByYellowAPI.png" width="555" height="145"/>
         <image name="grayGradient.png" width="10" height="100"/>
     </resources>
