--- a/Contractor Co-pilot/Base.lproj/Main.storyboard
+++ b/Contractor Co-pilot/Base.lproj/Main.storyboard
@@ -289,18 +289,12 @@
                                     <constraint firstAttribute="width" constant="298" id="eiU-4G-5Ti"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bCr-lz-uB4">
-                                <rect key="frame" x="261" y="195" width="78" height="18"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByYellowAPI.png" translatesAutoresizingMaskIntoConstraints="NO" id="hkg-9b-PRH">
+                                <rect key="frame" x="261" y="171" width="78" height="18"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="78" id="qqg-Md-9VW"/>
+                                    <constraint firstAttribute="width" constant="78" id="DvX-yt-MJm"/>
                                 </constraints>
-                                <state key="normal" title="Button" image="PoweredByYellowAPI.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="toYellowAPI:" destination="Fhi-1l-juP" eventType="touchUpInside" id="8Kb-ab-j3c"/>
-                                </connections>
-                            </button>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -310,15 +304,15 @@
                             <constraint firstItem="Urv-Ae-i7B" firstAttribute="top" secondItem="OaM-AE-DRS" secondAttribute="bottom" constant="19" id="DbR-Pz-PVX"/>
                             <constraint firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" constant="-0.5" id="EE7-0q-ego"/>
                             <constraint firstItem="aH7-6I-EHX" firstAttribute="top" secondItem="gDa-ck-BeE" secondAttribute="bottom" constant="8" id="EJG-Um-62s"/>
-                            <constraint firstItem="AYy-mD-oro" firstAttribute="top" secondItem="bCr-lz-uB4" secondAttribute="bottom" constant="22" id="Fc1-3b-hJH"/>
+                            <constraint firstItem="hkg-9b-PRH" firstAttribute="top" secondItem="gDa-ck-BeE" secondAttribute="bottom" constant="107" id="F6j-KZ-a6w"/>
                             <constraint firstItem="OaM-AE-DRS" firstAttribute="top" secondItem="AYy-mD-oro" secondAttribute="bottom" constant="25" id="I7E-Hb-FV7"/>
-                            <constraint firstItem="bCr-lz-uB4" firstAttribute="top" secondItem="aH7-6I-EHX" secondAttribute="bottom" constant="13" id="Ja6-62-wbw"/>
-                            <constraint firstItem="bCr-lz-uB4" firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" id="KWT-cp-yjk"/>
+                            <constraint firstItem="hkg-9b-PRH" firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" id="X9Z-5l-1bc"/>
                             <constraint firstItem="Urv-Ae-i7B" firstAttribute="leading" secondItem="OaM-AE-DRS" secondAttribute="leading" id="df8-cU-VFr"/>
                             <constraint firstItem="AYy-mD-oro" firstAttribute="top" secondItem="aH7-6I-EHX" secondAttribute="bottom" constant="53" id="gCs-wA-dDD"/>
                             <constraint firstItem="Urv-Ae-i7B" firstAttribute="trailing" secondItem="AYy-mD-oro" secondAttribute="trailing" id="hC7-7e-siy"/>
                             <constraint firstItem="aH7-6I-EHX" firstAttribute="top" secondItem="gDa-ck-BeE" secondAttribute="bottom" constant="8" symbolic="YES" id="i4i-EZ-yg6"/>
                             <constraint firstItem="aH7-6I-EHX" firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" constant="5.5" id="jLR-zo-bwg"/>
+                            <constraint firstItem="AYy-mD-oro" firstAttribute="top" secondItem="hkg-9b-PRH" secondAttribute="bottom" constant="46" id="xZS-gw-VP7"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
