Graphic Fix for Yellow Pages label
Fixed constraints to stop stretching on detail view of yellow pages
label

--- a/Contractor Co-pilot/Base.lproj/Main.storyboard
+++ b/Contractor Co-pilot/Base.lproj/Main.storyboard
@@ -252,19 +252,19 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <accessibility key="accessibilityConfiguration" hint="" label=""/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="229" id="SBc-vL-DWr"/>
-                                    <constraint firstAttribute="height" constant="50" id="yTQ-Wl-kLb"/>
+                                    <constraint firstAttribute="height" constant="50" id="SDg-vB-quB"/>
+                                    <constraint firstAttribute="width" constant="229" id="aOz-y9-kMn"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Urv-Ae-i7B" userLabel="Phone Label">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Urv-Ae-i7B" userLabel="Phone Label">
                                 <rect key="frame" x="186" y="399" width="229" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="BRS-TQ-dGh"/>
+                                    <constraint firstAttribute="height" constant="50" id="m9k-Sr-OVJ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -274,8 +274,7 @@
                                 <rect key="frame" x="186" y="310" width="240" height="70"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="KTA-6j-Epx"/>
-                                    <constraint firstAttribute="width" constant="240" id="UJz-Ev-2TY"/>
+                                    <constraint firstAttribute="width" constant="240" id="cbm-Gh-ymi"/>
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -286,33 +285,32 @@
                                 <rect key="frame" x="157" y="72" width="298" height="110"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="298" id="eiU-4G-5Ti"/>
+                                    <constraint firstAttribute="width" constant="298" id="WHc-YW-bKH"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByYellowAPI.png" translatesAutoresizingMaskIntoConstraints="NO" id="hkg-9b-PRH">
                                 <rect key="frame" x="261" y="171" width="78" height="18"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="78" id="DvX-yt-MJm"/>
+                                    <constraint firstAttribute="width" constant="78" id="dhh-Wp-OxA"/>
+                                    <constraint firstAttribute="height" constant="18" id="rom-he-mVg"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="AYy-mD-oro" firstAttribute="leading" secondItem="OaM-AE-DRS" secondAttribute="leading" id="ARt-XH-tlf"/>
-                            <constraint firstItem="NFN-xF-4Pr" firstAttribute="top" secondItem="Urv-Ae-i7B" secondAttribute="bottom" constant="107" id="Bie-Zl-8we"/>
-                            <constraint firstItem="Urv-Ae-i7B" firstAttribute="centerX" secondItem="UWV-Ef-WvV" secondAttribute="centerX" id="BlA-Lt-jG5"/>
-                            <constraint firstItem="Urv-Ae-i7B" firstAttribute="top" secondItem="OaM-AE-DRS" secondAttribute="bottom" constant="19" id="DbR-Pz-PVX"/>
-                            <constraint firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" constant="-0.5" id="EE7-0q-ego"/>
-                            <constraint firstItem="aH7-6I-EHX" firstAttribute="top" secondItem="gDa-ck-BeE" secondAttribute="bottom" constant="8" id="EJG-Um-62s"/>
-                            <constraint firstItem="hkg-9b-PRH" firstAttribute="top" secondItem="gDa-ck-BeE" secondAttribute="bottom" constant="107" id="F6j-KZ-a6w"/>
-                            <constraint firstItem="OaM-AE-DRS" firstAttribute="top" secondItem="AYy-mD-oro" secondAttribute="bottom" constant="25" id="I7E-Hb-FV7"/>
-                            <constraint firstItem="hkg-9b-PRH" firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" id="X9Z-5l-1bc"/>
-                            <constraint firstItem="Urv-Ae-i7B" firstAttribute="leading" secondItem="OaM-AE-DRS" secondAttribute="leading" id="df8-cU-VFr"/>
-                            <constraint firstItem="AYy-mD-oro" firstAttribute="top" secondItem="aH7-6I-EHX" secondAttribute="bottom" constant="53" id="gCs-wA-dDD"/>
-                            <constraint firstItem="Urv-Ae-i7B" firstAttribute="trailing" secondItem="AYy-mD-oro" secondAttribute="trailing" id="hC7-7e-siy"/>
-                            <constraint firstItem="aH7-6I-EHX" firstAttribute="top" secondItem="gDa-ck-BeE" secondAttribute="bottom" constant="8" symbolic="YES" id="i4i-EZ-yg6"/>
-                            <constraint firstItem="aH7-6I-EHX" firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" constant="5.5" id="jLR-zo-bwg"/>
-                            <constraint firstItem="AYy-mD-oro" firstAttribute="top" secondItem="hkg-9b-PRH" secondAttribute="bottom" constant="46" id="xZS-gw-VP7"/>
+                            <constraint firstItem="AYy-mD-oro" firstAttribute="leading" secondItem="OaM-AE-DRS" secondAttribute="leading" id="0Xo-O1-usP"/>
+                            <constraint firstItem="AYy-mD-oro" firstAttribute="top" secondItem="aH7-6I-EHX" secondAttribute="bottom" constant="53" id="0dC-aX-zEP"/>
+                            <constraint firstItem="aH7-6I-EHX" firstAttribute="centerX" secondItem="OaM-AE-DRS" secondAttribute="centerX" id="IeJ-Ac-w8p"/>
+                            <constraint firstItem="hkg-9b-PRH" firstAttribute="centerX" secondItem="AYy-mD-oro" secondAttribute="centerX" id="SgA-Sc-aqa"/>
+                            <constraint firstItem="Urv-Ae-i7B" firstAttribute="top" secondItem="OaM-AE-DRS" secondAttribute="bottom" constant="19" id="TvL-4V-YfD"/>
+                            <constraint firstItem="hkg-9b-PRH" firstAttribute="top" secondItem="gDa-ck-BeE" secondAttribute="bottom" constant="107" id="Wca-4R-5Lq"/>
+                            <constraint firstItem="aH7-6I-EHX" firstAttribute="top" secondItem="gDa-ck-BeE" secondAttribute="bottom" constant="8" symbolic="YES" id="XUP-kv-6v2"/>
+                            <constraint firstItem="Urv-Ae-i7B" firstAttribute="centerX" secondItem="UWV-Ef-WvV" secondAttribute="centerX" id="eKn-rg-B35"/>
+                            <constraint firstItem="Urv-Ae-i7B" firstAttribute="trailing" secondItem="AYy-mD-oro" secondAttribute="trailing" id="gA3-bW-tBR"/>
+                            <constraint firstItem="AYy-mD-oro" firstAttribute="top" secondItem="hkg-9b-PRH" secondAttribute="bottom" constant="46" id="gMI-fi-r4Q"/>
+                            <constraint firstItem="Urv-Ae-i7B" firstAttribute="leading" secondItem="OaM-AE-DRS" secondAttribute="leading" id="kPJ-hv-5xe"/>
+                            <constraint firstItem="OaM-AE-DRS" firstAttribute="top" secondItem="AYy-mD-oro" secondAttribute="bottom" constant="25" id="oDT-17-x8a"/>
+                            <constraint firstItem="NFN-xF-4Pr" firstAttribute="top" secondItem="Urv-Ae-i7B" secondAttribute="bottom" constant="107" id="p68-2f-jBI"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
